Add unit tests for ice spells and implement StormRider spell
- Created unit tests for the following ice spells:
  - ArcticBlast
  - FreezeRay
  - Frostwalk
  - IceWall
  - Petrify
- Added a new spell: StormRider
  - Features a storm aura that strikes nearby entities with lightning
  - Includes visual and sound effects for storm activation and deactivation
  - Configurable parameters for storm intensity, radius, and lightning damage